2012-11-16  Corinna Vinschen  <corinna@vinschen.de>

	* include/mntent.h: Only include paths.h when building for Cygwin.
	Add comment to explain why.

2012-11-11  Corinna Vinschen  <corinna@vinschen.de>

	* winbase.h: Semi-reinstantiate to workaround lack inline assembler
	implementation of InterlockedCompareExchange for i686 in Mingw64
	headers.
	* pinfo.cc (pinfo::init): Remove unused variable mapaddr.

2012-11-08  Corinna Vinschen  <corinna@vinschen.de>

	* sigproc.cc (proc_subproc): Delete unused variable child.

2012-11-08  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler_termios.cc (fhandler_termios::line_edit): Don't do special
	character handling when stopped by CTRL-S.
	* fhandler_tty.cc (bytes_available): Add arguments to debug_only_printf
	call.
	* sigproc.cc (proc_subproc): Simplify some if logic.

2012-11-04  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* include/sys/termios.h (CBRK): Define as alias of CEOL.
	(CREPRINT): Define as alias of CRPRNT.
	(CDISCARD): Define as alias of CFLUSH.
	(TTYDEF_*): Define.

2012-10-31  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/param.h: Include stddef.h to define NULL.

2012-10-31  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::rewinddir): Fix using
	wrong value in condition.

2012-10-30  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/cygwin.h: Add missing defines for CW_ALLOC_DRIVE_MAP,
	CW_MAP_DRIVE_MAP and CW_FREE_DRIVE_MAP.

2012-10-27  Kai Tietz  <ktietz@redhat.com>

	* dcrt0.cc (quoted): Renamed strechr to strchrnul.
	* environ.cc (environ_init): Likewise.
	* sec_acl.cc (aclfromtext32): Likewise.
	* sec_auth.cc (extract_nt_dom_user): Likewise.
	* uinfo.cc (pwdgrp::next_str): Likewise.
	* string.h (strechr): Likewise.

2012-10-26  Kai Tietz  <ktietz@redhat.com>

	* string.h (strechr): Replace assembler by
	C code.
	(ascii_strcasematch): Likewise.
	(ascii_strncasematch): Likwise.

2012-10-26  Corinna Vinschen  <corinna@vinschen.de>
