@@ -957,6 +957,7 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     bindresvport
     bindresvport_sa
     cfmakeraw
+    cfsetspeed
     daemon
     dn_comp
     dn_expand
